--- a/shop/shop.html
+++ b/shop/shop.html
@@ -137,8 +137,8 @@
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                 <div class="card-body">
                   <ul>
-                    <li>Clothing</li>
-                    <li>Jewelry</li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">Clothing</a></li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">Jewlery</a></li>
                   </ul> 
                   </div>
               </div>
@@ -154,8 +154,8 @@
               <div id="collapseFour" class="collapse" aria-labelledby="headingFourheadingFour" data-parent="#accordion">
                 <div class="card-body">
                     <ul>
-                        <li>Note Cards</li>
-                        <li>Pens</li>
+                        <li><a href="https://pbp1995.github.io/MJT/shop">Note Cards</a></li>
+                        <li><a href="https://pbp1995.github.io/MJT/shop">Pens</a></li>
                       </ul>
                 </div>
               </div>
