--- a/shop/shop.html
+++ b/shop/shop.html
@@ -101,10 +101,10 @@
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
                   <ul>
-                    <li>Optical Devices</li>
-                    <li>Commemorative China</li>
-                    <li>Museum Publication</li>
-                    <li>Souvenir</li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">Optical Devices</a></li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">Commemorative China</a></li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">Museum Publication</a></li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">Souvenir</a></li>
                   </ul>               
                  </div>
               </div>
@@ -120,8 +120,8 @@
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
                   <ul>
-                    <li>DVD & CDs</li>
-                    <li>Books</li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">DVD & CDs</a></li>
+                    <li><a href="https://pbp1995.github.io/MJT/shop">Books</a></li>
                   </ul> 
                    </div>
               </div>
