--- a/shop/shop.html
+++ b/shop/shop.html
@@ -87,7 +87,7 @@
 
         <div class="col-lg-3">
 
-          <h1 class="my-4">Shop</h1>
+          <h1 class="my-4 shop">Shop</h1>
           <div id="accordion">
             <div class="card">
               <div class="card-header" id="headingOne">
