--- a/shop/shop.html
+++ b/shop/shop.html
@@ -175,14 +175,12 @@
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                <img class="d-block img-fluid" src="img/header-gift-shop.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                <img class="d-block img-fluid" src="img/title-banner.svg" alt="Second slide">
               </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-              </div>
+
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -198,13 +196,13 @@
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <a href="#"><img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0099/2822/products/rocket-decanter-1-1000_400x700.jpg?v=1507164196" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">Belka and Strelka Porcelain Decanter</a>
                   </h4>
                   <h5>$148</h5>
-                  <p class="card-text">Hand-painted porcelain decanter from Russia</p>
+                  <p class="card-text-2">Hand-painted porcelain decanter from Russia</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -214,13 +212,13 @@
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <a href="#"><img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0099/2822/products/spacedogsolesya1_400x700.jpg?v=1411766223" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">Soviet Space Dogs</a>
                   </h4>
                   <h5>$32.95</h5>
-                  <p class="card-text">Volume on the heroic and beloved dogs of the Soviet space program</p>
+                  <p class="card-text-2">Volume on the heroic and beloved dogs of the Soviet space program</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -230,13 +228,13 @@
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <a href="#"><img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0099/2822/products/beetle-earrings-gold-600_400x700.jpg?v=1397167934" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">Protective Auditory Mimicry Earrings</a>
                   </h4>
                   <h5>$18.50</h5>
-                  <p class="card-text">Earrings made from beetle wings commemorate a Museum exhibit that compares the resonant frequencies of beetles and gemstones</p>
+                  <p class="card-text-2">Earrings made from beetle wings commemorate a Museum exhibit that compares the resonant frequencies of beetles and gemstones</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -246,13 +244,13 @@
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <a href="#"><img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0099/2822/products/laika-lithophane-1000_400x700.jpg?v=1507947168" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">Laika Lithophane</a>
                   </h4>
                   <h5>$27.00</h5>
-                  <p class="card-text">Light shining through the varied thicknesses of thin porcelain causes an image to appear in the lit porcelain</p>
+                  <p class="card-text-2">Light shining through the varied thicknesses of thin porcelain causes an image to appear in the lit porcelain</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -262,13 +260,13 @@
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <a href="#"><img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0099/2822/products/flipbookit-dove-animation_400x700.gif?v=1512083077" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">Flipbookit</a>
                   </h4>
                   <h5>$12.95 - $49.95</h5>
-                  <p class="card-text"> DIY hand-cranked animation movie machine that displays animated art in flip book style</p>
+                  <p class="card-text-2"> DIY hand-cranked animation movie machine that displays animated art in flip book style</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -278,13 +276,13 @@
 
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                <a href="#"><img class="card-img-top" src="https://cdn.shopify.com/s/files/1/0099/2822/products/trouvelot-print-total-eclipse-500_400x700.jpg?v=1353975094" alt=""></a>
                 <div class="card-body">
                   <h4 class="card-title">
                     <a href="#">'Total Eclipse of the Sun' Matted Print</a>
                   </h4>
                   <h5>$24.99</h5>
-                  <p class="card-text">The luminous illustration on this print is reproduced from one of Étienne Léopold Trouvelot's original lithographs</p>
+                  <p class="card-text-2">The luminous illustration on this print is reproduced from one of Étienne Léopold Trouvelot's original lithographs</p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
